--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-responsive-carousel": "^3.1.41",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0"
