--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-responsive-carousel": "^3.1.41",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.4",
+    "react-widgets": "^4.4.3",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2"
   },
