--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-dropzone": "^4.2.13",
     "react-redux": "^5.0.7",
     "react-responsive-carousel": "^3.1.41",
     "react-router": "^3.2.0",
