--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-transition-group": "^2.4.0",
     "react-widgets": "^4.4.3",
     "redux": "^4.0.0",
-    "redux-form": "^7.4.2"
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
